# rl_rob_trng

./: README.md
src/rl_training/: CMakeLists.txt  package.xml
src/rl_training/config/: training_params.yaml
src/rl_training/rl_training/: __init__.py  environment.py  reward.py  sarsa_agent.py  state_action.py  train_node.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: controllers.yaml
src/robot_bringup/launch/: gazebo.launch.py  rviz.launch.py  simulation.launch.py  training.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py
src/robot_description/meshes/: .gitkeep
src/robot_description/rviz/: robot_arm.rviz
src/robot_description/urdf/: robot_arm.gazebo.xacro  robot_arm.urdf.xacro
src/robot_moveit_config/: CMakeLists.txt  package.xml
src/robot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot_arm.srdf
src/robot_moveit_config/launch/: move_group.launch.py
src/trajectory_generator/: CMakeLists.txt  package.xml
src/trajectory_generator/msg/: SamplePath.msg
src/trajectory_generator/srv/: GenerateTrajectory.srv
src/trajectory_generator/trajectory_generator/: __init__.py  path_loader.py  trajectory_executor.py  trajectory_planner.py
